Fix settings back arrow vertical alignment.
The back arrow to get to the settings tabs on mobile was too low in
position in the header.

--- a/static/styles/subscriptions.css
+++ b/static/styles/subscriptions.css
@@ -442,7 +442,7 @@ form#add_new_subscription {
     color: hsl(0, 0%, 66%);
 
     float: left;
-    padding: 5px 10px;
+    padding: 2px 10px;
 
     cursor: pointer;
 
